# invoice-creator

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  head.html  invoice-creator.py  invoice.css  invoice_creator.py  new_table.html  pyproject.toml  quickstart.py  readme.md  requirements.txt  setup.py  tail.html  user_settings.json
app/: invoice-creator.py  quickstart.py  server.py
app/static/css/: invoice_styles.css  tutordash.css
app/templates/: head.html  index.html  students.html  tail.html
src/: main.py  quickstart.py  settings.py
src/invoice-creator/: invoice-creator.py
src/invoice_creator/: main.py  quickstart.py
